--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -1,65 +1,104 @@
-/* body {
-  font-family: Arial, sans-serif;
-  background-color: #f9f9f9;
+body {
+  font-family: 'Montserrat', sans-serif;
+
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  justify-content: left;
+  flex-direction: column;
+
   margin: 0;
 }
 
 .form-container {
   background-color: #ffffff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  width: 320px;
+  padding-left: 156px;
+  padding-top: 36px;
+}
+.time-input-button {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 32px;
   text-align: center;
 }
 
 .form-input {
-  width: 100%;
-  padding: 10px;
+  border-radius: 8px;
+  width: 272px;
+  height: 40px;
+  padding-left: 16px;
+
   margin-bottom: 20px;
-  border: 1px solid #cccccc;
-  border-radius: 4px;
+  border: 1px solid #808080;
+  font-weight: 400;
   font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  margin-right: 8px;
 }
 
 .form-button {
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-bottom: 20px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 75px;
+  height: 40px;
+  background-color: #4e75ff;
+  font-family: var(--font-family);
+  font-weight: 500;
   font-size: 16px;
-  width: 100%;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border: none;
 }
 
 .form-button:disabled {
-  background-color: #cccccc;
-  cursor: not-allowed;
+  background: #cfcfcf;
+  color: #989898;
+}
+.form-button:hover {
+  background: #6c8cff;
+  color: #fff;
+}
+.form-input:hover {
+  border: 1px solid #000;
+  border-radius: 4px;
+}
+.form-input:hover {
+  border: 1px solid #4e75ff;
+}
+.form-input:disabled {
+  border: 1px solid #808080;
+  color: #808080;
 }
 
 .timer {
   display: flex;
-  justify-content: space-around;
+  gap: 24px;
 }
 
 .field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
+  width: 55px;
+  height: 72px;
+  margin-right: 24px;
 }
 
 .value {
-  display: block;
-  font-size: 2em;
-  font-weight: bold;
-  color: #333333;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
 }
 
 .label {
-  font-size: 0.75em;
-  color: #666666;
-} */
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #2e2f42;
+  text-transform: uppercase;
+}
